syntax = "proto3";

package keyboard;

option go_package = "github.com/canonical/ubuntu-desktop-provision/provd/proto";

import "google/protobuf/empty.proto";

service KeyboardService {
    rpc SetKeyboard(SetKeyboardRequest) returns (google.protobuf.Empty) {}
    rpc SetInputSource(SetInputSourceRequest) returns (google.protobuf.Empty) {}
}

message KeyboardSettings {
    string layout = 1;
    string variant = 2;
}

message SetKeyboardRequest {
    KeyboardSettings settings = 1;
}

message SetInputSourceRequest {
  KeyboardSettings settings = 1;
}
